--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,8 @@ html, body {
     justify-content: center;
     align-self: center;
     min-width: 500px;
+    max-width: 500px;
+    overflow-wrap: anywhere;
 }
 
 @media screen and (max-width: 500px){
